fix code warnings